templates/gtm-server-container-cluster_template.yaml
---
# Source: gtm-server-container-cluster/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-gtm-server-container-cluster
  labels:
    helm.sh/chart: gtm-server-container-cluster-0.1.7
    app.kubernetes.io/name: gtm-server-container-cluster
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: gtm-server-container-cluster
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/type: "tagging"
---
# Source: gtm-server-container-cluster/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "release-name-gtm-server-container-cluster-preview"
  labels:
    helm.sh/chart: gtm-server-container-cluster-0.1.7
    app.kubernetes.io/name: gtm-server-container-cluster
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/type: "preview"
---
# Source: gtm-server-container-cluster/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-gtm-server-container-cluster
  labels:
    helm.sh/chart: gtm-server-container-cluster-0.1.7
    app.kubernetes.io/name: gtm-server-container-cluster
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gtm-server-container-cluster
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/type: "tagging"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gtm-server-container-cluster
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/type: "tagging"
    spec:
      serviceAccountName: release-name-gtm-server-container-cluster
      securityContext:
        {}
      containers:
        - name: gtm-server-tagging
          securityContext:
            {}
          image: "gcr.io/cloud-tagging-10302018/gtm-cloud-image:stable"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            limits:
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
---
# Source: gtm-server-container-cluster/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "release-name-gtm-server-container-cluster-preview"
  labels:
    helm.sh/chart: gtm-server-container-cluster-0.1.7
    app.kubernetes.io/name: gtm-server-container-cluster
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gtm-server-container-cluster
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/type: "preview"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gtm-server-container-cluster
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/type: "preview"
    spec:
      serviceAccountName: release-name-gtm-server-container-cluster
      securityContext:
        {}
      containers:
        - name: gtm-server-preview
          securityContext:
            {}
          image: "gcr.io/cloud-tagging-10302018/gtm-cloud-image:stable"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            limits:
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
---
# Source: gtm-server-container-cluster/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-gtm-server-container-cluster
  labels:
    helm.sh/chart: gtm-server-container-cluster-0.1.7
    app.kubernetes.io/name: gtm-server-container-cluster
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - "chart-example1.local"
      - "chart-example2.local"
      secretName: "release-name-gtm-server-container-cluster-tls-secret"
  rules:
    - host: chart-example1.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-gtm-server-container-cluster
                port:
                  number: 8080
          - path: /preview
            pathType: ImplementationSpecific
            backend:
              service:
                name: "release-name-gtm-server-container-cluster-preview"
                port:
                  number: 8080
    - host: chart-example2.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-gtm-server-container-cluster
                port:
                  number: 8080
          - path: /preview
            pathType: ImplementationSpecific
            backend:
              service:
                name: "release-name-gtm-server-container-cluster-preview"
                port:
                  number: 8080
---
# Source: gtm-server-container-cluster/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-gtm-server-container-cluster-test-connection"
  labels:
    helm.sh/chart: gtm-server-container-cluster-0.1.7
    app.kubernetes.io/name: gtm-server-container-cluster
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-gtm-server-container-cluster:8080']
  restartPolicy: Never
